# ISIM_Deep_Shadow_Maps

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  raytracer  raytracer-static
.cmake/api/v1/reply/: cache-v2-edefa6200f404d42d21f.json  cmakeFiles-v1-1afc259eedf63709a321.json  codemodel-v2-7d79b16230762802694c.json  directory-assimp-Release-3204bbef3b5f2e5e2390.json  directory-assimp.code-Release-bbaee20c0c1b3eca0cd7.json  directory-assimp.tools.assimp_cmd-Release-a98bbd49243ab9839030.json  index-2022-03-30T16-48-54-0872.json  target-assimp-Release-eaf06e4fffc6df13b192.json  target-assimp_cmd-Release-866f62fec9b1e9910858.json  target-raytracer-Release-058d4a2e23fee52b2a8c.json  target-raytracer-static-Release-0c76bdff5bea11dd56c9.json  target-uninstall-Release-84d1ec241e0f75d9a735.json  target-unit-Release-7f5dacc0f72c7ebf05de.json
.devcontainer/: Dockerfile  devcontainer.json
assimp/: CMakeCache.txt  Makefile  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake  revision.h
assimp/code/: Makefile  cmake_install.cmake
assimp/test/: Makefile  cmake_install.cmake
assimp/test/headercheck/: Makefile  cmake_install.cmake
assimp/tools/assimp_cmd/: Makefile  cmake_install.cmake
logs/7-gotta-go-fast/: log_at_end_7-gotta-go-fast.txt  log_before_multithreading.txt
saves/: monkey-shiny.ppm  monkey-specular.ppm  monkey_dsm_10001000.ppm  monkey_dsm_400400.ppm  monkey_dsm_v1.ppm  monkey_funny_light.ppm  monkey_shadowed.ppm  plant.ppm
scenes/: monkey.blend  monkey.dae  monkey.usdc  monkey_room.blend  monkey_room.blend1  monkey_room.stl  monkeycube.dae  monkeycube.ply  monkeys_room.stl  monkeys_room2.stl  plant.blend  plant.blend1  plant.stl  plant_247_obj.mtl  room.blend  room.blend1  room.stl  spikeball.blend  spikeball.blend1  spikeball.stl  tree.blend  tree.blend1
src/: Camera.cpp  Camera.h  DSM.cpp  DSM.hpp  Image.cpp  Image.h  PointLight.cpp  PointLight.h  Renderer.cpp  Renderer.h  geometry.cpp  geometry.h  main.cc  printer.cpp  printer.h
src/scene_objects/: camera.cc  camera.hh  light_source.hh  model.hh  point_light.cc  point_light.hh  sphere.cc  sphere.hh  triangle.cc  triangle.hh
test/: ColorTest.ppm  SphereTest.ppm  bush.ppm  monkey.ppm  monkey_dsm_DEEP9.ppm  monkey_room.ppm  plant.ppm  spikeball.ppm
